--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,3 @@
 {
-  "welcome": "Welcome, {username}! Demo from 0.1.0!!!! :)"
+  "welcome": "Welcome, {username}! Demo from 0.1.0!!!! :)  flat - true"
 }
