--- a/locales/en/en.json
+++ b/locales/en/en.json
@@ -1,3 +1,3 @@
 {
-  "welcome": "Welcome, {username}! Demo from 0.1.0!!!!! go base "
+  "welcome": "Welcome, {username}!!!! Demo from 0.1.0!!!!! go base "
 }
