--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,6 +1,6 @@
 {
     "alone": "key auto 24.04-new7",
-    "alone2": "tested1",
+    "alone2": "test4",
     "hub": "unhub",
-    "hub2": "tested3"
+    "hub2": "test3"
 }
