--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,4 +1,6 @@
 {
-  "alone": "dfdfdfdf 24.0555",
-  "hub": "unhub 24.04-2"
+    "alone": "key auto 24.04-new7",
+    "alone2": "test4",
+    "hub": "unhub",
+    "hub2": "test3"
 }
