--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,6 +1,6 @@
 {
     "alone": "key auto 24.04-new7",
-    "alone2": "test4",
-    "hub": "unhub",
-    "hub2": "test3"
+    "alone2": "test42",
+    "hub": "123",
+    "hub2": "test33"
 }
